@@ -93,7 +93,7 @@ public class GlobalMemory implements Memory {
 		if (memorySplit.length < 2) {
 			return 0l;
 		}
-		long memory = new Long(memorySplit[1]).longValue();
+		long memory = Long.valueOf(memorySplit[1]);
 		if (memorySplit.length > 2 && memorySplit[2].equals("kB")) {
 			memory *= 1024;
 		}
